# Umbrella

./: .gitmodules  CMakeLists.txt  CMakeSettings.txt  Dockerfile  INSTALL.ps1  INSTALL.sh  README.md
extlib/: makefile-default-paths-linux  makefile-default-paths-macos-arm64  makefile-default-paths-macos-x86_64  makefile-default-paths-win  makefile-libGUROBI  makefile-libHiGHS  makefile-libNetCDF  makefile-libSCIP  makefile-libStOpt
